# mori

./: CMakeLists.txt
cmake/: FindNUMA.cmake
examples/ops/dispatch_combine/: test_dispatch_combine.py  test_dispatch_combine_internode.py  test_dispatch_combine_intranode_overlap.py
include/mori/ops/dispatch_combine/: common.hpp  dispatch_combine.hpp  dma_transfer.hpp  proxy.hpp  proxy_device.hpp  utils.hpp
python/mori/ops/: dispatch_combine.py
src/application/context/: context.cpp
src/ops/: CMakeLists.txt
src/ops/dispatch_combine/: dispatch_combine.cpp  dma_transfer.cpp  internode.hpp  internode_divided.hpp  intranode.hpp  intranode_divided.hpp  intranode_overlap.hpp  proxy.cpp  utils.cpp
src/pybind/: mori.cpp
tests/python/ops/: bench_dispatch_combine.py  bench_dispatch_combine_intranode_overlap.py  test_dispatch_combine.py  test_dispatch_combine_internode_inconsistency.py
